# Assignment8/backend/api/openapi.yaml
@@ -58,7 +58,24 @@ paths:
                     $ref: '#/components/schemas/Post'
           401:
             description: Unauthorized Access
-                
+
+  /post/mine:
+    get:
+      summary: Grab Current User's Posts
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: Authenticated, Show Posts
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Post'
+        401:
+          description: Unauthorized Access
+
   /group:
     get:
       summary: Grab All Groups
